fix(shared): invisible progress bar with vgui colors

--- a/src/shared/colors/vgui.css
+++ b/src/shared/colors/vgui.css
@@ -13,9 +13,9 @@
 	--color-active-caption-bg-end: transparent;
 	--color-active-caption-text: #fcfefc;
 
-	--color-highlight: transparent;
+	--color-highlight: #c4b550;
 	--color-highlight-border: transparent;
-	--color-highlight-text: #c4b550;
+	--color-highlight-text: #2c2e24;
 
 	--color-tooltip: #c4b550;
 	--color-tooltip-text: #2c2c24;
